<resources>
    <string name="app_name">ABCD-Plantas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fichas">Fichas</string>
    <string name="g_neros">Géneros</string>
    <string name="verenweb">Ver en web</string>
    <string name="buscar">Buscar</string>
    <string name="a_adir">Añadir</string>
    <string name="cambiar">Cambiar</string>
    <string name="salir">Salir</string>

    <string name="familias">Familias</string>
    <string name="genero">Género</string>
    <string name="agregar">Añadir</string>

    <string name="jugar">Jugar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="o">" o "</string>
    <string name="grupo">Grupo</string>
    <string name="familia">Familia</string>
    <string name="n_vulgar">Nom.vulgar</string>
    <string name="n_cient_fico">Nom.científ.</string>
    <string name="ir">Ir</string>
    <string name="ir_a">Ir a:</string>
    <string name="textview">TextView</string>
    <string name="resultado">Resultado</string>
    <string name="empezar">EMPEZAR</string>
    <string name="atr_s">ATRÁS</string>
    <string name="ir_desde">Ir desde</string>
    <string name="clasificar">Clasificar</string>
    <string name="verenveb">Ver en Web</string>
    <string name="colecci_n_de_fichas">Colección de fichas</string>
    <string name="bot_n_interface">Botón interface</string>
    <string name="transfer">Transfer</string>
    <string name="wikipedia">WIKIPEDIA</string>
    <string name="fragmento_5">Fragmento 5</string>
    <string name="fragmento_6">Fragmento 6</string>
    <string name="fragmento_7">Fragmento 7</string>
    <string name="fragmento_8">Fragmento 8</string>
    <string name="siguiente">Sigte</string>
    <string name="anterior">Previo</string>
    <string name="ver_g_neros">Ver géneros</string>
    <string name="ver_fichas">Ver fichas</string>
    <string name="agregar_fichas_g_neros">Agregar Fichas Géneros</string>
    <string name="genero_nuevo_en_clave_y_planta">Agregar género Planta Familia en ambos</string>
    <string name="genero_nuevo_en_planta">Agregar género Planta Familia solo en Clave</string>
    <string name="nueva_familia_en_planta">Nueva familia en Planta</string>
    <string name="observaciones">Observaciones</string>
    <string name="ruta">Ruta</string>
    <string name="nombre_vulgar">Nombre vulgar</string>
    <string name="familias_clave">Familias Clave</string>
    <string name="grupos">Grupos</string>
    <string name="ampliar_claves">Ampliar claves</string>
    <string name="abrir_texto">Abrir texto</string>
    <string name="inicio">Inicio</string>
    <string name="empezar_a_clasificar_desde">Taxones conocidos...</string>
    <string name="elegir_fam">Elegir familia</string>
    <string name="elegir_gen">Elegir género</string>
    <string name="gymnosperma">Gymnosperma</string>
    <string name="angiosperma">Angiosperma</string>
    <string name="pteridophyta">Pteridophyta</string>
    <string name="division">División</string>
    <string name="figuraminas_desc">Figuras/Láminas</string>
    <string name="abreviaturas">Abreviaturas</string>
    <string name="lamina">Laminas</string>
    <string name="figuras">Figuras</string>
    <string name="limpiar">Limpiar</string>
    <string name="destino_2">Destino 2</string>
    <string name="criterio_2">Criterio 2</string>
    <string name="destino_1">Destino 1</string>
    <string name="criterio_1">Criterio 1</string>
    <string name="buscando">Buscando</string>
</resources>