<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/celestin"
    tools:context=".fragmentos.zz_0_Inicio_clasificar">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tV11_1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/naran_claro"
        android:gravity="center"
        android:paddingVertical="5dp"
        android:text="@string/empezar_a_clasificar_desde"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llH1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tV11_1"
        app:layout_constraintVertical_bias="0">

        <CheckBox
            android:id="@+id/chkD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="auto"
            android:text="@string/division" />

        <CheckBox
            android:id="@+id/chkF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/familia" />

        <CheckBox
            android:id="@+id/chkG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genero" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/cel_claro"
        android:orientation="horizontal"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:tooltipText="División"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llH1">

        <RadioButton
            android:id="@+id/rB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pteridophyta" />


        <RadioButton
            android:id="@+id/rB2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gymnosperma" />

        <RadioButton
            android:id="@+id/rB3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angiosperma" />

    </RadioGroup>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/limpiar"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rGroup" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/buscar"
        app:layout_constraintEnd_toEndOf="@+id/rGroup"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/rGroup" />


    <LinearLayout
        android:id="@+id/llH2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cel_claro"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        >

        <EditText
            android:id="@+id/etFam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Familias"
            android:hint="@string/familias"
            android:inputType="text"
            android:labelFor="@+id/spin0"
            />

        <Spinner
            android:id="@+id/spin0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:dropDownSelector="@drawable/ic_action_name_redondo"
            android:minHeight="48dp"
            android:prompt="@string/elegir_fam"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llH3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/verde_limon_1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llH2">

        <EditText
            android:id="@+id/etGen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Géneros"
            android:hint="@string/g_neros"
            android:inputType="text"
            android:labelFor="@+id/spin1"
            />

        <Spinner
            android:id="@+id/spin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownSelector="@drawable/ic_action_name_redondo"
            android:minHeight="48dp"
            android:prompt="@string/elegir_gen"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/empezar"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
